@@ -9,6 +9,7 @@
  - issue #130 : remove unnecessary AriadneLocation conversion and try-catch in DetailsActivity and MainActivity
  - issue #132 : remove Android permission INTERNET, it is not needed to get WiFi/cell phone based location updates
  - issue #133 : Add list of used required sensors to AndroidManifest
+ - issue #103 : Don't calculate speed if distance between current and previous location is smaller than the current accuracy
 
  v0.1.1 (released 04Dec2013)
  
